<resources translatable="false">
    <string name="facebook_app_id">959864665060487</string>
    <string name="fb_login_protocol_scheme">fb959864665060487</string>
    <string name="facebook_client_token">507dae1af0c6e3e9ea59e798587e80b3</string>
    <string name="google_server_client_id">15309153268-vnpucgn8cvbna2sseegrg2ofogrf8n17.apps.googleusercontent.com</string>
    <string name="google_game_app_id">15309153268</string>
    <string name="manifest_aihelp_domain">gamehollywoodhk.aihelp.net</string>
    <string name="manifest_aihelp_appid">gamehollywoodhk_platform_598ee350-adbf-4a70-bef6-6d11232b7301</string>
    <string name="manifest_admob_appid">ca-app-pub-3512615046087076~6119035746</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading</string>
    <string name="app_error">Application error!</string>
    <string name="searching">Searching&#8230;</string>
    <string name="waiting">Waiting&#8230;</string>
    <string name="enable_logcat">Enable logcat</string>
    <string name="disable_logcat">Disable logcat</string>
    <string name="enable_extend">Enable AppWall</string>
    <string name="disable_extend">Disable AppWall</string>
    <string name="enable_debug">Enable debug</string>
    <string name="disable_debug">Disable debug</string>
    <string name="account_manager">Account Manager</string>
    <string name="google_in_app_billing">In-App Billing</string>
    <string name="fb_gifting">FB Gifts</string>
    <string name="wa_video_ad">Video Ad</string>
    <string name="wa_csc">AIHelp</string>
    <string name="test_crash">Test Crash</string>
    <string name="check_update">Check Update</string>
    <string name="download_patch">Download Patch</string>
    <string name="clear_install_campaign_cache">Clear Install Campaign cache</string>
    <string name="payment">Payment</string>
    <string name="static_payment">Buy</string>
    <string name="input_sku_id">Input Sku Id</string>
    <string name="warming">Warning</string>
    <string name="not_login_yet">Not login! Please login first!</string>
    <string name="login_now">Login Now</string>
    <string name="gg_game_service">Google Game Services</string>
    <string name="test_crash_warming">Test crash will make the app crash. Continue?</string>
    <string name="hot_update_check">Hot update check</string>
    <string name="update">Update</string>
    <string name="get_update_link">Get update link</string>
    <string name="create_client_id">Set ClientId</string>
    <string name="create_random_client_id">Set Random ClientId</string>
    <string name="random_client_id">Random</string>
    <string name="open_review">Open Google review</string>
    <string name="parameters">Parameters</string>
    <string name="add_parameter">Add parameter</string>
    <string name="tracking">Tracking</string>
    <string name="send_tracking">Send Tracking</string>
    <string name="send">Send</string>
    <string name="event_send">Event Send</string>
    <string name="request_permission">Request Permission</string>
    <string name="login">Login</string>
    <string name="fb_login">Facebook Login</string>
    <string name="fb_logout">Facebook Logout</string>
    <string name="gg_login">Google Login</string>
    <string name="gg_logout">Google Logout</string>
    <string name="anonymous_login">Visitor Login</string>
    <string name="winga_login">WINGA Login</string>
    <string name="vk_login">VK Login</string>
    <string name="twitter_login">Twitter Login</string>
    <string name="instagram_login">Instagram Login</string>
    <string name="huaweihms_login">Huawei HMS Login</string>
    <string name="ghg_integration_login">GHG Login</string>
    <string name="r2_integration_login">R2 Login</string>
    <string name="login_form">Login Form</string>
    <string name="app_login">App Login</string>
    <string name="nowgg_login">Login with now.gg</string>
    <string name="logout">Logout</string>
    <string name="rebind_account_with_device">Bind third party accounts with device</string>
    <string name="do_not_rebind_account_with_device">Don\'t bind third party accounts with device</string>
    <string name="enable_login_cache">Enable Login Cache</string>
    <string name="disable_login_cache">Disable Login Cache</string>
    <string name="clean_login_cache">Clean login cache</string>
    <string name="bind_account">Bind Account</string>
    <string name="choose_account_platform">Choose account platform</string>
    <string name="query_bound_account">Query Bound Account</string>
    <string name="open_account_manager_page">Open SDK Account Manager Page</string>
    <string name="bound_accounts">Bound Accounts</string>
    <string name="not_bound_any_account">Not bound any account</string>
    <string name="create_account">Create Account</string>
    <string name="switch_account">Change Account</string>
    <string name="get_account_info">Get Account Info</string>
    <string name="bind">Bind</string>
    <string name="unbind">Unbind</string>
    <string name="bind_account_success">Binded successfully!</string>
    <string name="bind_account_error">Failed to bind. Please try again later.</string>
    <string name="unbind_account_success">Unbinded successfully!</string>
    <string name="unbind_account_error">Failed to unbind. Please try again later.</string>
    <string name="facebook_account">Facebook account</string>
    <string name="google_account">Google account</string>
    <string name="vk_account">VK account</string>
    <string name="twitter_account">Twitter account</string>
    <string name="instagram_account">Instagram account</string>
    <string name="google_iap_billing">Iap Billing</string>
    <string name="init_parameter_error">Initialization parameter error</string>
    <string name="loading_inventory">Loading inventory</string>
    <string name="generating_order">Generating order</string>
    <string name="processing_payment_result">Processing payment result</string>
    <string name="buy_success_title">Thank you</string>
    <string name="buy_success">Bought success</string>
    <string name="buy_failed_title">Warming</string>
    <string name="buy_failed">Bought failed,please try again</string>
    <string name="buy_item_unconsumed">You already owned the item and dose not consumed. please try again later</string>
    <string name="buy_error">An error occurred,if you have successfully charged,Please contact customer service</string>
    <string name="buy_reorder_time_limit">Operation too frequent!</string>
    <string name="inventory">Inventory</string>
    <string name="error_loading_data">An error occurred when loading data</string>
    <string name="reload_data">Click to reload</string>
    <string name="buy">Buy</string>
    <string name="purchase_canceled">Purchase canceled</string>
    <string name="gifting">Send Gifts</string>
    <string name="received_gift">Received Gift</string>
    <string name="ask_for_gift">Ask for gift</string>
    <string name="click_to_choose_gift">Click to choose gift</string>
    <string name="send_gift">Send Gift</string>
    <string name="search">Search</string>
    <string name="choose_gift_first">Please choose a gift</string>
    <string name="send_you_a_gift">Send you a gift</string>
    <string name="gift_send_success">Gift send success</string>
    <string name="gift_send_cancel">Gift send canceled</string>
    <string name="gift_send_error">Gift send failed</string>
    <string name="send_me_a_gift">Please send me a gift</string>
    <string name="ask_for_gift_success">Ask for gift success</string>
    <string name="ask_for_gift_cancel">Ask for gift canceled</string>
    <string name="ask_for_gift_error">Ask for gift failed</string>
    <string name="gift_received">Gift received, check you package</string>
    <string name="gift_received_msg_format">%1$s send you a gift " %2$s "</string>
    <string name="ask_for_gift_msg_format">%1$s ask you for a gift " %2$s "</string>
    <string name="gift_data_error">Gift data error</string>
    <string name="gift_chooser">Gift Chooser</string>
    <string name="share">Share</string>
    <string name="fb_share">Facebook Share</string>
    <string name="fb_share_link">Facebook Share Link</string>
    <string name="fb_share_picture">Facebook Share Picture</string>
    <string name="fb_share_video">Facebook Share Video</string>
    <string name="fb_share_open_graph">Facebook Share Open Graph</string>
    <string name="share_use_dialog">Share use dialog</string>
    <string name="share_use_api">Share use api</string>
    <string name="invite">Invitations</string>
    <string name="fb_invite">Facebook Invitations</string>
    <string name="fb_app_invite">FB App Invitations</string>
    <string name="fb_game_service_invite">FB Game Services Invitations</string>
    <string name="fb_check_invite_install_reward">FB Invitations Install Reward</string>
    <string name="fb_check_invite_event_reward">FB Invitations Event Reward</string>
    <string name="vk_invite">VK Invitations</string>
    <string name="vk_app_invite">VK App Invitations</string>
    <string name="vk_game_service_invite">VK Game Services Invitations</string>
    <string name="vk_check_invite_install_reward">VK Invitations Install Reward</string>
    <string name="vk_check_invite_event_reward">VK Invitations Event Reward</string>
    <string name="pay_ui_title">Web Pay</string>
    <string name="game_service">Game Services</string>
    <string name="google_game_service">Google Game Services</string>
    <string name="sign_in">Sign-in</string>
    <string name="sign_out">Sign-out</string>
    <string name="need_sign_in">You need sign in to google game</string>
    <string name="display_achievements">Display achievements</string>
    <string name="reveal_achievements">Reveal achievements</string>
    <string name="hint_input_achievement_id">Input achievement id</string>
    <string name="unlock_achievements">Unlock achievements</string>
    <string name="increase_achievements">Increase achievements</string>
    <string name="step_achievements">Steps achievements</string>
    <string name="set_steps_achievements">Set steps achievements(Less than current step is invalid)</string>
    <string name="hint_input_num_steps">Input num steps</string>
    <string name="community">Community</string>
    <string name="vk_community">VK Community</string>
    <string name="vk_community_get_account">Get account info</string>
    <string name="vk_community_search_by_id">Search by id</string>
    <string name="vk_community_app_linked">App linked group</string>
    <string name="vk_community_user">Current user group</string>
    <string name="vk_community_is_member">Current user is member of group</string>
    <string name="user_center">User Center</string>
    <string name="game_review">Open Game Review</string>
    <string name="account_deletion">Account Deletion</string>
    <string name="admob">AdMob</string>
    <string name="check_interstitial_ad">Check Interstitial Ad</string>
    <string name="show_interstitial_ad">Show Interstitial Ad</string>
    <string name="check_app_open_ad">Check AppOpen Ad</string>
    <string name="show_app_open_ad">Show AppOpen Ad</string>
    <string name="hint_rewarded_ad_name">Rewarded Ad Name</string>
    <string name="show_rewarded_ad">Show Rewarded Ad</string>
    <string name="enable_app_open_ad">AppOpen Ad: Enable</string>
    <string name="disable_app_open_ad">AppOpen Ad: Disable</string>
    <string name="enable_banner_ad">Check Ad: Enable</string>
    <string name="disable_banner_ad">Banner Ad: Disable</string>
    <string name="check_ump_options">Check UMP Options</string>
    <string name="show_ump_options">Show UMP Options</string>
    <string name="rare_function">Rare Function</string>
    <string name="show_consent_preferences">Consent Preferences</string>
</resources>