<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical">

    <com.wa.sdk.demo.widget.TitleBar
        android:id="@+id/tb_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@id/layout_main_banner_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/tbtn_debug"
                    style="@style/demo_button"
                    android:checked="true"
                    android:textOff="@string/disable_debug"
                    android:textOn="@string/enable_debug" />
            </LinearLayout>

            <LinearLayout style="@style/demo_linearlayout">

                <Button
                    android:id="@+id/btn_login"
                    style="@style/demo_button"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/btn_account_manager"
                    style="@style/demo_button"
                    android:text="@string/account_manager" />
            </LinearLayout>

            <LinearLayout style="@style/demo_linearlayout">

                <Button
                    android:id="@+id/btn_pay"
                    style="@style/demo_button"
                    android:text="@string/payment" />

                <Button
                    android:id="@+id/btn_tracking"
                    style="@style/demo_button"
                    android:text="@string/tracking" />
            </LinearLayout>

            <LinearLayout style="@style/demo_linearlayout">

                <EditText
                    android:id="@+id/et_static_pay_product_id"
                    style="@style/demo_button"
                    android:hint="@string/input_sku_id"
                    android:maxLines="1" />

                <Button
                    android:id="@+id/btn_static_pay"
                    style="@style/demo_button"
                    android:text="@string/static_payment" />
            </LinearLayout>

            <LinearLayout style="@style/demo_linearlayout">

                <Button
                    android:id="@+id/btn_request_permission"
                    style="@style/demo_button"
                    android:text="@string/request_permisssion" />

                <Button
                    android:id="@+id/btn_csc"
                    style="@style/demo_button"
                    android:text="@string/wa_csc" />

            </LinearLayout>

            <LinearLayout style="@style/demo_linearlayout">

                <Button
                    android:id="@+id/btn_user_center"
                    style="@style/demo_button"
                    android:text="@string/user_center" />

                <Button
                    android:id="@id/btn_admob"
                    style="@style/demo_button"
                    android:text="@string/admob" />
            </LinearLayout>

            <LinearLayout style="@style/demo_linearlayout">

                <Button
                    android:id="@+id/btn_account_deletion"
                    style="@style/demo_button"
                    android:text="@string/account_deletion" />

                <Button
                    android:id="@+id/btn_open_game_review"
                    style="@style/demo_button"
                    android:text="@string/game_review" />
            </LinearLayout>

            <LinearLayout style="@style/demo_linearlayout">


                <Button
                    android:id="@+id/btn_show_consent_preferences"
                    style="@style/demo_button"
                    android:text="@string/show_consent_preferences" />

                <Button
                    android:id="@+id/btn_"
                    style="@style/demo_button"
                    android:text="@string/admob"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout style="@style/demo_linearlayout">

                <Button
                    android:id="@+id/btn_rare_function"
                    style="@style/demo_button"
                    android:text="@string/rare_function" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
