<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEFEFEF"
    android:orientation="vertical">

    <com.wa.sdk.demo.widget.TitleBar
        android:id="@+id/tb_account_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout style="@style/demo_linearlayout">

                <Button
                    android:id="@+id/btn_account_manager_page"
                    style="@style/demo_button"
                    android:text="@string/open_account_manager_page" />
            </LinearLayout>

            <LinearLayout style="@style/demo_linearlayout">

                <Button
                    android:id="@+id/btn_bind_account"
                    style="@style/demo_button"
                    android:text="@string/bind_account" />

                <Button
                    android:id="@+id/btn_query_bound_account"
                    style="@style/demo_button"
                    android:text="@string/query_bound_account" />
            </LinearLayout>

            <LinearLayout style="@style/demo_linearlayout">

                <Button
                    android:id="@+id/btn_create_account"
                    style="@style/demo_button"
                    android:text="@string/create_account" />

                <Button
                    android:id="@+id/btn_switch_account"
                    style="@style/demo_button"
                    android:text="@string/switch_account" />
            </LinearLayout>

            <LinearLayout
                style="@style/demo_linearlayout"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_get_account_info"
                    style="@style/demo_button"
                    android:text="@string/get_account_info" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>