<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEFEFEF">
    <com.wa.sdk.demo.widget.TitleBar
        android:id="@+id/tb_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AA000000"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">
                <ToggleButton
                    android:id="@+id/tbtn_login_flow_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textOn="@string/rebind_account_with_device"
                    android:textOff="@string/do_not_rebind_account_with_device"
                    android:checked="false"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/fb_login"
                        android:onClick="onClick"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/btn_fb_login" />
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/gg_login"
                        android:onClick="onClick"
                        android:id="@+id/btn_gg_login" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <Button
                        android:id="@+id/btn_anonymous_login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/anonymous_login"
                        android:onClick="onClick"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/app_login"
                        android:onClick="onClick"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/btn_app_login" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/vk_login"
                        android:id="@+id/btn_vk_login"
                        android:onClick="onClick"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/logout"
                        android:onClick="onClick"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/btn_logout" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <ToggleButton
                        android:id="@+id/tbtn_enable_login_cache"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOn="@string/enable_login_cache"
                        android:textOff="@string/disable_login_cache"
                        android:checked="false"/>
                    <Button
                        android:id="@+id/btn_login_form"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/login_form"
                        android:onClick="onClick"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btn_clear_login_cache"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/clean_login_cache"
                        android:onClick="onClick"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <!--<com.wa.sdk.wa.user.widget.WALoginForm-->
            <!--android:id="@+id/glf_login_form"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:visibility="invisible"/>-->
    </FrameLayout>

</LinearLayout>